# dev-infra

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  install.sh  pyproject.toml  uninstall.sh
cli/: main.py  setup_wizard.py
daneel/: costs.py  quality_gate.py  router.py  safety.py  server.py
hooks/: hooks.json  install.sh  post-compaction.sh  pre-tool-safety.sh  rescue_helper.py  session-end.sh  session-start.sh  uninstall.sh
rescue/: engine.py  extractors.py  store.py
services/: com.dev-infra.daneel.plist
